--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node server/app.js",
+    "start": "nodemon server/app.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,11 +21,16 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
-    "express": "^4.15.5",
+    "express": "^4.16.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "mongoose": "^4.12.1",
+    "ng2-page-scroll": "^4.0.0-beta.11",
+    "passport": "^0.4.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -35,6 +40,7 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.13",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
@@ -45,6 +51,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "nodemon": "^1.12.1",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
