--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
     "start": "nodemon server/app.js",
-    "build": "ng build",
-    "test": "ng test",
+    "test": "ng serve --host 0.0.0.0 --port 8080 --public-host $C9_HOSTNAME",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
