--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "^4.3.0",
     "@angular/platform-browser-dynamic": "^4.3.0",
     "@angular/router": "^4.3.0",
-    "bcrypt": "^1.0.3",
+    "angular2-jwt": "^0.2.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
