--- a/package.json
+++ b/package.json
@@ -10,36 +10,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.0",
-    "@angular/common": "^4.3.0",
-    "@angular/compiler": "^4.3.0",
-    "@angular/core": "^4.3.0",
-    "@angular/forms": "^4.3.0",
-    "@angular/http": "^4.3.0",
-    "@angular/platform-browser": "^4.3.0",
-    "@angular/platform-browser-dynamic": "^4.3.0",
-    "@angular/router": "^4.3.0",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "angular2-jwt": "^0.2.3",
     "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
-    "express": "^4.16.1",
+    "datatables.net": "^1.10.16",
+    "datatables.net-dt": "^1.10.16",
+    "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "mongoose": "^4.12.1",
-    "ng2-page-scroll": "^4.0.0-beta.11",
+    "mongoose": "^4.13.5",
+    "ng2-page-scroll": "^4.0.0-beta.12",
     "passport": "^0.4.0",
-    "rxjs": "^5.4.2",
+    "popper.js": "^1.13.0",
+    "primeng": "^5.0.2",
+    "rxjs": "5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.4.2",
-    "@angular/compiler-cli": "^4.3.0",
-    "@angular/language-service": "^4.3.0",
+    "@angular/compiler-cli": "^4.4.6",
+    "@angular/language-service": "^4.4.6",
+    "@types/datatables.net": "^1.10.7",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.2.13",
-    "@types/node": "~6.0.60",
+    "@types/jquery": "^3.2.16",
+    "@types/node": "^6.0.92",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -47,7 +52,7 @@
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "nodemon": "^1.12.1",
     "protractor": "~5.1.2",
