fixed compatibility errors

--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "^4.4.6",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
     "angular2-jwt": "^0.2.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
@@ -30,6 +30,7 @@
     "jquery": "^3.2.1",
     "mongoose": "^4.13.5",
     "ng2-page-scroll": "^4.0.0-beta.12",
+    "ng2-smooth-scroll": "^1.0.1",
     "passport": "^0.4.0",
     "popper.js": "^1.13.0",
     "primeng": "^5.0.2",
@@ -37,7 +38,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
+    "@angular/cli": "1.5.2",
     "@angular/compiler-cli": "^4.4.6",
     "@angular/language-service": "^4.4.6",
     "@types/datatables.net": "^1.10.7",
